--- a/credits.html
+++ b/credits.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>Rubikémon - Accueil</title>
+  <title>Rubikémon - Crédits</title>
 </head>
 <body>
     <img src="logo.png" alt="logo">
