--- a/credits.html
+++ b/credits.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 <body>
     <img src="logo.png" alt="logo">
 
-    <main id="credits" style="max-width: 75%; width: fit-content; margin: 2rem auto; padding: 2rem; color: #ffffffa3; background: #151515dc; backdrop-filter: blur(10px); border-radius: 40px; font-family: 'Red Hat Display', sans-serif;">
+    <main id="credits" style="max-width: 75%; width: fit-content; margin: 2rem auto; padding: 2rem; margin-bottom: 0%; color: #ffffffa3; background: #151515dc; backdrop-filter: blur(10px); border-radius: 40px; font-family: 'Red Hat Display', sans-serif;">
 
   <h1 style="margin-bottom: 0.5rem;">Crédits</h1>
 
@@ -38,10 +38,10 @@
   </section>
 
 </main>
-
+<div style="height: 6rem;"></div> <!-- espace pour éviter que la tab-bar chevauche -->
 
     <nav class="tab-bar">
-  <a href="index.html">
+  <a href="accueil.html">
     <button class="tab-button"><span class="material-icons">home</span> Accueil</button></a>
   <a href="rubikedex.html">
     <button class="tab-button"><span class="material-icons">grid_view</span> Rubikédex</button></a>
