--- a/rubikedex.html
+++ b/rubikedex.html
@@ -131,7 +131,7 @@ overlay.addEventListener("click", (e) => {
 
 
 <nav class="tab-bar">
-  <a href="index.html">
+  <a href="accueil.html">
     <button class="tab-button"><span class="material-icons">home</span> Accueil</button></a>
   <a href="rubikedex.html">
     <button class="tab-button active"><span class="material-icons">grid_view</span> Rubikédex</button></a>
